src/test/testData/inspections/unresolvedSymbolInspection/highlightUnknown.lama
var a, b, c;

fun e() {}

<error descr="Symbol 'd' is unresolved">d</error>